[gd_scene load_steps=11 format=2]

[ext_resource path="res://Menu's/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Menu's/UI_OptionsMenu_New.tscn" type="PackedScene" id=2]
[ext_resource path="res://Sprites/UI/Fonts/PaperJohnnyEins-Regular.otf" type="DynamicFontData" id=3]
[ext_resource path="res://Sprites/UI/ScreenUI/MenuUnderlay.png" type="Texture" id=4]
[ext_resource path="res://fonts/Roboto-Bold.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 100
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.6, 0.6, 0.6, 0.815686 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.6, 0.6, 0.6, 0.368627 )

[sub_resource type="StyleBoxFlat" id=5]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
LevelselectScenePath = "res://Menu's/UI_LevelSelect_New.tscn"
NewGameScenePath = "res://lvl_One_new_tiles.tscn"
CreditsScenePath = "res://Menu's/UI_CreditsScreen_New.tscn"

[node name="MenuUnderlay" type="Sprite" parent="."]
position = Vector2( 640, 360 )
scale = Vector2( 0.666667, 0.666667 )
texture = ExtResource( 4 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 632, 329 )
scale = Vector2( 1.1, 1.1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
custom_constants/margin_right = 100
custom_constants/margin_left = 100
custom_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 100.0
margin_right = 1180.0
margin_bottom = 670.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 13.0
margin_right = 1080.0
margin_bottom = 131.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = SubResource( 1 )
text = "GunKey"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 149.0
margin_right = 1080.0
margin_bottom = 670.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 1080.0
margin_bottom = 101.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 300
custom_constants/margin_top = 20
custom_constants/margin_left = 300
custom_constants/margin_bottom = 20

[node name="Levelselect Button" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer"]
margin_left = 300.0
margin_top = 20.0
margin_right = 780.0
margin_bottom = 81.0
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Level Select"

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 105.0
margin_right = 1080.0
margin_bottom = 206.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 300
custom_constants/margin_top = 20
custom_constants/margin_left = 300
custom_constants/margin_bottom = 20

[node name="New  Game Button" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer2"]
margin_left = 300.0
margin_top = 20.0
margin_right = 780.0
margin_bottom = 81.0
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "New Game"

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 210.0
margin_right = 1080.0
margin_bottom = 311.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 300
custom_constants/margin_top = 20
custom_constants/margin_left = 300
custom_constants/margin_bottom = 20

[node name="Options Button" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer3"]
margin_left = 300.0
margin_top = 20.0
margin_right = 780.0
margin_bottom = 81.0
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Options"

[node name="MarginContainer4" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 315.0
margin_right = 1080.0
margin_bottom = 416.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 300
custom_constants/margin_top = 20
custom_constants/margin_left = 300
custom_constants/margin_bottom = 20

[node name="Credits Button" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer4"]
margin_left = 300.0
margin_top = 20.0
margin_right = 780.0
margin_bottom = 81.0
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Credits"

[node name="MarginContainer5" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 420.0
margin_right = 1080.0
margin_bottom = 521.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 300
custom_constants/margin_top = 20
custom_constants/margin_left = 300
custom_constants/margin_bottom = 20

[node name="Quit Game Button" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer5"]
margin_left = 300.0
margin_top = 20.0
margin_right = 780.0
margin_bottom = 81.0
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Quit Game"

[node name="OptionsMenu" parent="." instance=ExtResource( 2 )]
visible = false

[connection signal="button_up" from="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer/Levelselect Button" to="." method="_on_Levelselect_Button_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer2/New  Game Button" to="." method="_on_New__Game_Button_button_up"]
[connection signal="button_down" from="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer3/Options Button" to="." method="_on_Options_Button_button_down"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer4/Credits Button" to="." method="_on_Credits_Button_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer5/Quit Game Button" to="." method="_on_Quit_Game_Button_button_up"]
